<?xml version="1.0" encoding="UTF-8"?>

<!-- Copyright (c) 2020 Bubble, Inc. All rights reserved. For personal (non-commercial) use, see license: https://getbubblenow.com/bubble-license/ -->
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">

    <modelVersion>4.0.0</modelVersion>

    <parent>
        <groupId>org.cobbzilla</groupId>
        <artifactId>cobbzilla-parent</artifactId>
        <version>1.0.0-SNAPSHOT</version>
    </parent>

    <groupId>bubble</groupId>
    <artifactId>bubble</artifactId>
    <version>1.0.0-SNAPSHOT</version>
    <packaging>pom</packaging>

    <licenses>
        <license>
            <name>The GNU Affero General Public License, Version 3</name>
            <url>https://www.gnu.org/licenses/agpl-3.0.html</url>
            <distribution>repo</distribution>
        </license>
    </licenses>

    <modules>
        <module>bubble-server</module>
    </modules>

    <profiles>
        <profile>
            <id>complete</id>
            <!-- these library modules hardly ever change, so don't build them all the time -->
            <modules>
                <module>utils</module>
            </modules>
        </profile>
    </profiles>

    <build>
        <plugins>
            <!-- use Java 11 -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-compiler-plugin</artifactId>
                <version>2.3.2</version>
                <configuration>
                    <source>11</source>
                    <target>11</target>
                    <showWarnings>true</showWarnings>
                </configuration>
            </plugin>

            <!-- JUnit options -->
            <plugin>
                <groupId>org.apache.maven.plugins</groupId>
                <artifactId>maven-surefire-plugin</artifactId>
                <version>3.0.0-M4</version>
                <configuration>
                    <forkCount>1</forkCount>
                    <reuseForks>false</reuseForks>
                    <argLine>-Xmx1024m -XX:MaxPermSize=256m</argLine>
                    <includes>
                        <include>bubble.test.DbInit</include>
                        <include>bubble.test.system.AuthTest</include>
                        <include>bubble.test.payment.PaymentTest</include>
                        <include>bubble.test.payment.RecurringBillingTest</include>
                        <include>bubble.test.promo.FirstMonthFreePromotionTest</include>
                        <include>bubble.test.promo.ReferralMonthFreePromotionTest</include>
                        <include>bubble.test.promo.AccountCreditTest</include>
                        <include>bubble.test.promo.MultiplePromotionsTest</include>
                        <include>bubble.test.system.DriverTest</include>
                        <include>bubble.test.filter.ProxyTest</include>
                        <include>bubble.test.filter.TrafficAnalyticsTest</include>
                        <include>bubble.test.system.BackupTest</include>
                        <include>bubble.test.system.NetworkTest</include>
                        <include>bubble.abp.spec.BlockListTest</include>
                    </includes>
                </configuration>
            </plugin>
        </plugins>
    </build>

</project>
